[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "kedro_flux"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro~=0.19.11",]

[project.scripts]
kedro-flux = "kedro_flux.__main__:main"

[tool.kedro]
package_name = "kedro_flux"
project_name = "Kedro-Flux"
kedro_init_version = "0.19.11"
tools = "['None']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "kedro_flux.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "45d4ec6b7dd94181b5b6a029efd39974"
